ensured all links are reachable on smaller screens

--- a/vl_splash_screen.css
+++ b/vl_splash_screen.css
@@ -29,12 +29,12 @@ body {
 
     padding-top: 1em;
 
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .vl_splash_screen span {
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .vl_splash_screen span h3 {
@@ -56,7 +56,7 @@ body {
     background-color: black;
     margin-top: 1em;
     text-align: center;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
@@ -70,16 +70,8 @@ body {
 }
 
 .ribbon_text_wrapper {
-    
     padding-top: 0.28em;
-    
-
     width: calc(var(--top_ribbon_text_width) * 7 * 2);
-
-    /* animation-name: text_ribbon_run_00;
-    animation-duration: 180s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear; */
 }
 
 .line_scroll {
@@ -148,6 +140,7 @@ body {
 @media only screen and (max-width: 65em){
 
     .vl_splash_screen {
+        grid-template-rows: 4fr 3fr 1fr;
         background-position-x: 65%;
         font-size: 1.35em;
     }
